adding new button

--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -21,6 +21,7 @@ search=Search
 logout=Logout
 home=Home
 my_account=My account
+new_task=New Task
 
 tweet_msg=How are you?
 who_to_follow=Who to follow\:
