--- a/src/main/webapp/WEB-INF/messages_es.properties
+++ b/src/main/webapp/WEB-INF/messages_es.properties
@@ -19,6 +19,7 @@ search=Buscar amigos
 logout=Salir
 tweet_msg=Como estas?
 my_account=Mi perfil
+new_task=New Task
 home=Inicio
 who_to_follow=Puedes seguir\:
 follow=Seguir
