--- a/src/main/webapp/WEB-INF/messages_md.properties
+++ b/src/main/webapp/WEB-INF/messages_md.properties
@@ -21,6 +21,7 @@ search=Căutare
 logout=Ieșire
 home=Acasă
 my_account=Profilul meu
+new_task=Noua Sarcina
 
 tweet_msg=Cum vă simţiţi?
 who_to_follow=Care să urmeze\:
