--- a/src/main/webapp/WEB-INF/messages_ru.properties
+++ b/src/main/webapp/WEB-INF/messages_ru.properties
@@ -19,6 +19,7 @@ search=Поиск
 logout=Выйти
 tweet_msg=Как настроение?
 my_account=Мой аккаунт
+new_task=Новая задача
 home=На главную
 who_to_follow=С кем дружить\:
 follow=Дружить
