--- a/src/main/webapp/WEB-INF/messages.properties
+++ b/src/main/webapp/WEB-INF/messages.properties
@@ -14,7 +14,6 @@ email=
 reg_button=
 search=
 logout=
-tweet_msg=
 my_account=
 new_task=
 home=
@@ -22,7 +21,7 @@ who_to_follow=
 follow=
 Unfollow=
 show_more_people=
-tweet=
+task=
 
 Required=
 Size.user.username=
