--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -38,6 +38,18 @@ followers=Followers
 hi=Hi
 these_are_people_you_follow=These are people you follow
 
+projects=Projects
+periods=Periods
+tasks=Tasks
+id=Id
+projectname=Project Name
+shortname=Project Short Name
+actions=Actions
+editproject=Edit
+deleteproject=Delete
+newproject=New Project
+newperiod=New Period
+
 edit_your_profile=Edit your profile
 delete_profile=DELETE PROFILE
 description=Describe yourself
