--- a/src/main/webapp/WEB-INF/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages_en.properties
@@ -49,6 +49,9 @@ editproject=Edit
 deleteproject=Delete
 newproject=New Project
 newperiod=New Period
+periodname=Period Name
+startdate=Start Date
+enddate=End Date
 
 edit_your_profile=Edit your profile
 delete_profile=DELETE PROFILE
