Added Validator for each Entity Updeted Database Updated JSP's

--- a/src/main/webapp/WEB-INF/messages_es.properties
+++ b/src/main/webapp/WEB-INF/messages_es.properties
@@ -46,3 +46,12 @@ Size.user.password=Tu contraseña debe ser de al menos 6 caracteres.
 Different.user.password=Tus contraseñas no coinciden
 Wrong.user.email=Por favor, ingresa un correo electrónico válido.
 Duplicate.user.email=Este correo electrónico ya está registrado.
+
+Duplicate.project.name=Such Project Name already exists.
+Duplicate.project.shortName=Such Project Short Name already exists.
+
+Duplicate.period.name=Such Period Name already exists.
+
+Select.task.project=Please select Project
+Select.task.period=Please select Period
+Select.task.status=Please select Status
