--- a/src/main/webapp/WEB-INF/messages_ru.properties
+++ b/src/main/webapp/WEB-INF/messages_ru.properties
@@ -48,3 +48,12 @@ Size.user.password=Пароль должен быть от 6 символов.
 Different.user.password=Пароли не совпадают.
 Wrong.user.email=Неверный адрес электронной почты.
 Duplicate.user.email=Адрес электронной почты уже зарегистрирован.
+
+Duplicate.project.name=Проект с таким именем уже существует.
+Duplicate.project.shortName=Проект с таким коротким именем уже существует.
+
+Duplicate.period.name=Период с таким именем уже существует.
+
+Select.task.project=Пожалуйста, выберите Проект
+Select.task.period=Пожалуйста, выберите Период
+Select.task.status=Пожалуйста, выберите Статус
